Button spacing and font fix. Rainbow growth.

--- a/MyceliumProject/src/style.css
+++ b/MyceliumProject/src/style.css
@@ -14,14 +14,12 @@ background-color: silver;
   display: flex;
   justify-content: space-evenly;
   width: 100%;
-  height: 5%;
   top:95%;
+  height: 5%;
 }
 
 .button {
-    background-color: cyan;
     width: 100%;
-    font-size: 3vw;
 }
 
 #options {
